<resources>
    <string name="app_name">Stuy Schedule</string>

    <string name="home">Home</string>
    <string name="detail">Detail</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="current_period">Current Period</string>
    <string name="default_period">Period 1</string>
    <string name="default_day">A</string>
    <string name="default_time_elapsed">15</string>
    <string name="default_time_left">30</string>
    <string name="minutes_into">Minutes Into</string>
    <string name="minutes_left">Minutes Left</string>

    <string name="no_school">No School</string>
    <string name="default_before_school_data">Today is an A day with Math Testing</string>
    <string name="default_after_school_data">Tomorrow is an A day with Math Testing</string>
</resources>