<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.StuySchedule.AppWidget.Container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.StuySchedule.AppWidgetContainer">

    <TextView
        android:id="@+id/curr_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/current_period"
        android:text="@string/default_period"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/times"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/curr_period"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_into"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/default_time_elapsed"
            android:textColor="@color/green"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/default_time_left"
            android:textColor="@color/red"
            android:textSize="48sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/curr_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/default_day"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>